<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@color/bottom_nav"
    android:elevation="4dp"
    android:padding="16dp">
    >

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_temp_min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/min_temp"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_date" />

    <TextView
        android:id="@+id/tv_temp_min_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="10"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_temp_min"
        app:layout_constraintStart_toEndOf="@+id/tv_temp_min" />

    <TextView
        android:id="@+id/tv_temp_min_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="°C"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_temp_min"
        app:layout_constraintStart_toEndOf="@+id/tv_temp_min_value" />

    <TextView
        android:id="@+id/tv_temp_max"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/max_temp"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_temp_min" />

    <TextView
        android:id="@+id/tv_temp_max_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="20"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_temp_max"
        app:layout_constraintStart_toEndOf="@+id/tv_temp_max" />

    <TextView
        android:id="@+id/tv_temp_max_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="°C"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_temp_max"
        app:layout_constraintStart_toEndOf="@+id/tv_temp_max_value" />
</androidx.constraintlayout.widget.ConstraintLayout>